# Divide-Conquer-

./: .gitignore  CMakeLists.txt  main.cpp  Алгоритмы.docx
algorithms cpp/: CMakeLists.txt
algorithmsCPP/: CMakeLists.txt
algorithmsCPP/include/algorithms/: Sorts.hpp  closestPoints.hpp  halfplaneIntersect.hpp  kernel.hpp  mergeHull.hpp  triangulate.hpp  voronoiDiagram.hpp
algorithmsCPP/include/geometry/: Edge.hpp  List.hpp  Node.hpp  Point.hpp  Polygon.hpp  Vertex.hpp
algorithmsCPP/source/: main.cpp
algorithmsCPP/source/algorithms/: closestPoints.cpp  halfplaneIntersect.cpp  kernel.cpp  mergeHull.cpp  triangulate.cpp  voronoiDiagram.cpp
algorithmsCPP/source/geometry/: Edge.cpp  Node.cpp  Point.cpp  Polygon.cpp  Vertex.cpp
babylon/: 8.4 nearest_points.js  MergeSortVisualization.js  triangulation.js
pictures/: 8.10.dwg  8.11.dwg  8.2(а).dwg  8.2(б).dwg  8.3 1.dwg  8.3 2.dwg  8.4(а).dwg  8.4(б).dwg  8.4(в).dwg  8.5.dwg  8.5.dwg.bak  8.6.dwg  8.7.dwg  8.8.dwg  8.9.dwg
